language/move-lang/tests/move_check/typing/derefrence_invalid.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/derefrence_invalid.move:6:15
  │
5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
  │                --- Given: 'u64'
6 │         (*x : bool);
  │               ^^^^
  │               │
  │               Invalid type annotation
  │               Expected: 'bool'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/derefrence_invalid.move:7:18
  │
5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
  │                                 --- Given: 'u64'
6 │         (*x : bool);
7 │         (*x_mut: &u64);
  │                  ^^^^
  │                  │
  │                  Invalid type annotation
  │                  Expected: '&u64'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/derefrence_invalid.move:9:14
  │
5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
  │                                          - Given: '0x8675309::M::S'
  ·
9 │         (*s: X);
  │              ^
  │              │
  │              Invalid type annotation
  │              Expected: '0x8675309::M::X'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:10:17
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                  --- Given: 'u64'
   ·
10 │         (*&s.f: bool);
   │                 ^^^^
   │                 │
   │                 Invalid type annotation
   │                 Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:11:15
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                  --- Given: 'u64'
   ·
11 │         (s.f: &u64);
   │               ^^^^
   │               │
   │               Invalid type annotation
   │               Expected: '&u64'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:12:17
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                          - Given: '0x8675309::M::X'
   ·
12 │         (*&s.x: &X);
   │                 ^^
   │                 │
   │                 Invalid type annotation
   │                 Expected: '&0x8675309::M::X'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:14:18
   │
 5 │     fun t0(x: &u64, x_mut: &mut u64, s: &S, s_mut: &mut S){
   │                                                         - Given: '0x8675309::M::S'
   ·
14 │         (*s_mut: X);
   │                  ^
   │                  │
   │                  Invalid type annotation
   │                  Expected: '0x8675309::M::X'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:15:21
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                  --- Given: 'u64'
   ·
15 │         (*&s_mut.f: bool);
   │                     ^^^^
   │                     │
   │                     Invalid type annotation
   │                     Expected: 'bool'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:16:25
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                  --- Given: 'u64'
   ·
16 │         (*&mut s_mut.f: (bool, u64));
   │                         ^^^^^^^^^^^
   │                         │
   │                         Invalid type annotation
   │                         Expected: '(bool, u64)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:17:19
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                  --- Given: 'u64'
   ·
17 │         (s_mut.f: &u64);
   │                   ^^^^
   │                   │
   │                   Invalid type annotation
   │                   Expected: '&u64'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:18:21
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                          - Given: '0x8675309::M::X'
   ·
18 │         (*&s_mut.x: (X, S));
   │                     ^^^^^^
   │                     │
   │                     Invalid type annotation
   │                     Expected: '(0x8675309::M::X, 0x8675309::M::S)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/derefrence_invalid.move:19:25
   │
 3 │     struct S has copy, drop { f: u64, x: X }
   │                                          - Given: '0x8675309::M::X'
   ·
19 │         (*&mut s_mut.x: ());
   │                         ^^
   │                         │
   │                         Invalid type annotation
   │                         Expected: '()'

